package com.narxoz.rpg.composite;

public class EnemyUnit extends UnitLeaf{
    public EnemyUnit(String name, int health, int attackPower) {
        super(name, health, attackPower);
    }
}
