package com.narxoz.rpg.composite;

public class RaidGroup extends PartyComposite{
    public RaidGroup(String name) {
        super(name);
    }
}
