@startuml
title Composite Pattern - Raid Team Hierarchy

interface CombatNode {
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
  +getChildren(): List<CombatNode>
  +printTree(indent: String): void
}

abstract class UnitLeaf {
  -name: String
  -health: int
  -attackPower: int
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
  +getChildren(): List<CombatNode>
  +printTree(indent: String): void
}

class HeroUnit
class EnemyUnit

class PartyComposite {
  -name: String
  -children: List<CombatNode>
  +add(node: CombatNode): void
  +remove(node: CombatNode): void
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
  +getChildren(): List<CombatNode>
  +printTree(indent: String): void
}

class RaidGroup

class RaidEngine {
  -random: Random
  +setRandomSeed(seed: long): RaidEngine
  +runRaid(teamA: CombatNode, teamB: CombatNode, teamASkill: Skill, teamBSkill: Skill): RaidResult
}

class Skill
class RaidResult

UnitLeaf ..|> CombatNode
PartyComposite ..|> CombatNode

HeroUnit --|> UnitLeaf
EnemyUnit --|> UnitLeaf
RaidGroup --|> PartyComposite

PartyComposite *-- "0..*" CombatNode
RaidEngine ..> CombatNode
RaidEngine ..> Skill
RaidEngine ..> RaidResult
@enduml